#include <Vida.hpp>
#include <Foco.hpp>

class Chumi
{
private:
    Vida vida;
public:
    Chumi() {}
    ~Chumi() {}
    void Consumir(Foco foco){

    }
};