class Humo
{
private:
    
public:
    Humo() {}
    ~Humo() {}
};