class Vida
{
private:
    
public:
    Vida() {}
    ~Vida() {}
};