class Jugador
{
private:
    
public:
    Jugador() {}
    ~Jugador() {}
};